--- a/luckyNumber.html
+++ b/luckyNumber.html
@@ -211,8 +211,8 @@ function startSpin() {
 
     // 🔧 CHANGE RANGE HERE IF NEEDED
     // const lucky = Math.floor(Math.random() * 101) + 100; // 100–200
-    // const lucky = Math.floor(Math.random() * 200) + 1;   // 1–200
-    const lucky = Math.floor(Math.random() * 201);          // 0–200
+    const lucky = Math.floor(Math.random() * 193) + 1;   // 1–200
+    //const lucky = Math.floor(Math.random() * 201);          // 0–200
 
     const padded = lucky.toString().padStart(3, "0");
 
